--- a/frontend/src/styles/layout/general.scss
+++ b/frontend/src/styles/layout/general.scss
@@ -1,11 +1,35 @@
+// global style
+*,
+*::before,
+*::after {
+    margin: 0;
+    padding: 0;
+    box-sizing: inherit;
+}
+
+
 html {
+    box-sizing: border-box;
     padding: 0;
     margin: 0;
     height: 100%;
 }
 
 body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
+    font-family: $font_paragraph, sans-serif;
+    font-size: 1rem;
+  }
+  
+
+h1,h2,h3,h4,h5 {
+    font-size: 2em;
+    font-family: $font_headline;
+    font-weight: 400;
+    color: $color_text;
 }
+
+p {
+    font-family: $font-paragraph, serif;
+    font-size: 1rem;
+  }
+  
